build: move build_from_src options to env

--- a/components/ieee802154/CMakeLists.txt
+++ b/components/ieee802154/CMakeLists.txt
@@ -7,7 +7,7 @@ idf_component_register(
 
 if(CONFIG_IEEE802154_ENABLED)
     idf_component_get_property(esp_phy_lib esp_phy COMPONENT_LIB)
-    if(CONFIG_IEEE802154_LIB_FROM_INTERNAL_SRC)
+    if($ENV{IEEE802154_LIB_FROM_INTERNAL_SRC})
         idf_component_get_property(ieee802154_lib ieee802154_driver COMPONENT_LIB)
         target_link_libraries(${COMPONENT_LIB} INTERFACE $<TARGET_FILE:${ieee802154_lib}>
                             $<TARGET_FILE:${esp_phy_lib}> libphy.a libbtbb.a)
