esp_adc: new esp_adc component and adc drivers

--- a/components/ulp/CMakeLists.txt
+++ b/components/ulp/CMakeLists.txt
@@ -33,4 +33,4 @@ endif()
 
 idf_component_register(SRCS ${srcs}
                        INCLUDE_DIRS ${includes}
-                       REQUIRES driver)
+                       REQUIRES driver esp_adc)
